major updates done

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css">
 	<link rel="stylesheet" type="text/css" href="css/media_queries.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="css/loading-bar.css">
 	<link rel="icon" href="imgs/favicon.png">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 </head>
 <body>
 	<div class="container">
@@ -21,83 +22,98 @@
 				<div class="about-content">
 					<h1>Sobre mim</h1>
 					<p>Técnico formado em Informática e Desenvolvimento de Sistemas e estudante de Ciência da Computação. Web developer versátil, com conhecimentos em frontend, backend, e frameworks. Programador Java, C, Python, e autodidata nas horas vagas.</p>
-					<br><br>
-					<h1>Informações de Contato</h1>
-						<p><i class="fas fa-mobile-alt"></i> &nbsp; (31) 98236-1299</p>
-						<p><i class="fas fa-envelope"></i> &nbsp;raulfmansur@hotmail.com</p>
-						<p><i class="fab fa-github-square"></i> &nbsp;<a class="link-header" href="https://github.com/raul4247" target="blank">raul4247</a></p>
-						<p><i class="fab fa-linkedin-in"></i> &nbsp;<a class="link-header" href="https://www.linkedin.com/in/raul-mansur" target="blank">raul-mansur</a></p>
 				</div>
+			</div>
+		</div>
+		<div class="columns contact-section">
+			<div class="column">
+				<h1><i class="fas fa-address-card"></i> Informações de Contato</h1>
+				<br>
+				<ul>
+					<li><i class="fas fa-mobile-alt"></i> &nbsp; (31) 98236-1299</li>
+					<li><i class="fas fa-envelope"></i> &nbsp;raulfmansur@hotmail.com</li>
+					<li><i class="fab fa-github-square"></i> &nbsp;<a class="link-header" href="https://github.com/raul4247" target="blank">raul4247</a></li>
+					<li><i class="fab fa-linkedin-in"></i> &nbsp;<a class="link-header" href="https://www.linkedin.com/in/raul-mansur" target="blank">raul-mansur</a></li>
+				</ul>
+				<hr>
 			</div>
 		</div>
 		<div class="columns main-section">
 			<div class="column">
-				<h1 class="has-text-centered"><i class="fas fa-graduation-cap"></i> Formação Acadêmica</h1>
-				<br>
 				<div class="columns">
-					<div class="column dates">
-						<h3>2010-2015</h3>
-					</div>
-					<div class="column is-two-thirds">
-						<h4>Curso de Inglês (Avançado)</h4>
-						<p>Curso de Inglês nível avançado (Number One Idiomas).</p>
-					</div>
-				</div>
-				<div class="columns">
-					<div class="column dates">
-						<h3>2015-2017</h3>
-					</div>
-					<div class="column is-two-thirds">
-						<h4>Curso Técnico Integrado de Informática</h4>
-						<p>Técnico em Informática e Desenvolvimento de Sistemas (COLTEC UFMG).</p>
-					</div>
-				</div>
-				<div class="columns">
-					<div class="column dates">
-						<h3>2018-Atual</h3>
-					</div>
-					<div class="column is-two-thirds">
-						<h4>Bacharelado em Ciência da Computação</h4>
-						<p>Ciência da Computação (PUC MINAS).</p>
-					</div>
-				</div>
-			</div>
-			<div class="column">
-				<h1 class="has-text-centered"><i class="fas fa-folder"></i> Projetos</h1>
-				<br>
-				<div class="columns">
-					<div class="column dates">
-						<h3>2017-2017</h3>
-					</div>
-					<div class="column is-two-thirds">
-						<h4>Competição Cora:</h4>
-						<p>Competição de robôs seguidores de linha promovida pela Engenharia Elétrica - UFMG. [<a href="https://www.facebook.com/UFMGcora/" target="blank">Facebook</a>]</p>
+					<div class="column">
+						<h1><i class="fas fa-graduation-cap"></i> Formação Acadêmica</h1>
 						<br>
-						<h4>Pakot:</h4>
-						<p>Plataforma web que simula um serviço de entregas de pacotes. [<a href="https://www.usepakot.com/" target="blank">Projeto</a>][<a href="https://github.com/gustavo-depaula/pakot-backend" target="blank">Github</a>]</p>
-					</div>						
-				</div>
-				<div class="columns">
-					<div class="column dates">
-						<h3>2018-2018</h3>
+						<div class="columns">
+							<div class="column dates">
+								<h3>2010-2015</h3>
+							</div>
+							<div class="column is-two-thirds">
+								<h4>Curso de Inglês (Avançado)</h4>
+								<p>Curso de Inglês nível avançado (Number One Idiomas).</p>
+							</div>
+						</div>
+						<div class="columns">
+							<div class="column dates">
+								<h3>2015-2017</h3>
+							</div>
+							<div class="column is-two-thirds">
+								<h4>Curso Técnico Integrado de Informática</h4>
+								<p>Técnico em Informática e Desenvolvimento de Sistemas (COLTEC UFMG).</p>
+							</div>
+						</div>
+						<div class="columns">
+							<div class="column dates">
+								<h3>2018-Atual</h3>
+							</div>
+							<div class="column is-two-thirds">
+								<h4>Bacharelado em Ciência da Computação</h4>
+								<p>Ciência da Computação (PUC MINAS).</p>
+							</div>
+						</div>
 					</div>
-					<div class="column is-two-thirds">
-						<h4>Vem de Zap:</h4>
-						<p>Site gerador de mensagens com integração ao Whats App, a partir da brincadeira "vem de zap". [<a href="http://vem-de-zap.herokuapp.com" target="blank">Projeto</a>][<a href="https://github.com/raul4247/VemDeZap" target="blank">Github</a>]</p>
+					<div class="column projects">
+						<h1><i class="fas fa-folder"></i> Projetos</h1>
+						<br>
+						<div class="columns">
+							<div class="column dates">
+								<h3>2017-2017</h3>
+							</div>
+							<div class="column is-two-thirds">
+								<h4>Competição Cora:</h4>
+								<p>Competição de robôs seguidores de linha promovida pela Engenharia Elétrica - UFMG.</p>
+								<p>[<a href="https://www.facebook.com/UFMGcora/" target="blank">Facebook</a>]</p>
+								<br>
+								<h4>Pakot:</h4>
+								<p>Plataforma web que simula um serviço de entregas de pacotes.</p>
+								<p>[<a href="https://www.usepakot.com/" target="blank">Projeto</a>][<a href="https://github.com/gustavo-depaula/pakot-backend" target="blank">Github</a>]</p>
+							</div>	
+
+						</div>
+						<div class="columns">
+							<div class="column dates">
+								<h3>2018-2018</h3>
+							</div>
+							<div class="column is-two-thirds">
+								<h4>Vem de Zap:</h4>
+								<p>Site gerador de mensagens com integração ao Whats App, a partir da brincadeira "vem de zap".</p>
+								<p>[<a href="http://vem-de-zap.herokuapp.com" target="blank">Projeto</a>][<a href="https://github.com/raul4247/VemDeZap" target="blank">Github</a>]</p>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 		<div class="columns main-section">
 			<div class="column">
-				<h1 class="has-text-centered"><i class="fas fa-trophy"></i> Certificados e Conquistas</h1>
+				<h1><i class="fas fa-trophy"></i> Certificados e Conquistas</h1>
 				<br>
 				<div class="columns">
 					<div class="column dates">
 						<h3>2015-2016</h3>
 					</div>
 					<div class="column is-two-thirds">
-						<h4>Relevancia Acadêmica PIC JR:</h4>
+						<h4>Relevância Acadêmica PIC JR:</h4>
 						<p>Co-participação no projeto Desenvolvimento e Aplicação de Hardware em Sistemas Embarcados com orientação do professor Leandro Maia na UFMG.</p>
 					</div>
 				</div>
@@ -111,8 +127,8 @@
 					</div>
 				</div>
 			</div>
-			<div class="column">
-				<h1 class="has-text-centered"><i class="fas fa-laptop"></i> Interesses e Hobbies</h1>
+			<div class="column interests-section">
+				<h1><i class="fas fa-laptop"></i> Interesses e Hobbies</h1>
 				<br>
 				<div class="interests">
 					<h3>Programação:</h3>
@@ -129,33 +145,109 @@
 		<div class="columns footer-section">
 			<div class="column">
 				<h1>Skils Gerais</h1>
-				<ul>
-					<li>Desenvolvimento Web</li>
-					<li>Desenvolvimento Desktop</li>
-					<li>Linux + Shell</li>
-					<li>Embarcados</li>
-				</ul>
+				<br>
+				<div class="progressBar">
+					<p>Desenvolvimento Web Geral</p>
+					<div class="progressBarContainer">
+						<div class="progressBarValue value-70"></div>
+					</div>
+				</div>
+				<div class="progressBar">
+					<p>Aplicações REST</p>
+					<div class="progressBarContainer">
+						<div class="progressBarValue value-80"></div>
+					</div>
+				</div>
+				<div class="progressBar">
+					<p>Desenvolvimento Desktop</p>
+					<div class="progressBarContainer">
+						<div class="progressBarValue value-60"></div>
+					</div>
+				</div>
+				<div class="progressBar">
+					<p>Linux + Shell</p>
+					<div class="progressBarContainer">
+						<div class="progressBarValue value-40"></div>
+					</div>
+				</div>
+				<div class="progressBar">
+					<p>Embarcados</p>
+					<div class="progressBarContainer">
+						<div class="progressBarValue value-50"></div>
+					</div>
+				</div>
 			</div>
 			<div class="column">
 				<h1>Linguagens de Programação</h1>
-				<ul>
-					<li>Javascript</li>
-					<li>PHP</li>
-					<li>Python</li>
-					<li>Java</li>
-					<li>C/C++</li>
-					<li>HTML</li>
-					<li>CSS</li>
-				</ul>
+				<div class="columns">
+					<div class="column">
+						<br>
+						<div class="progressBar">
+							<p>Javascript</p>
+							<div class="progressBarContainer">
+								<div class="progressBarValue value-70"></div>
+							</div>
+						</div>
+						<div class="progressBar">
+							<p>PHP</p>
+							<div class="progressBarContainer">
+								<div class="progressBarValue value-80"></div>
+							</div>
+						</div>
+						<div class="progressBar">
+							<p>Python</p>
+							<div class="progressBarContainer">
+								<div class="progressBarValue value-40"></div>
+							</div>
+						</div>
+						<div class="progressBar">
+							<p>Java</p>
+							<div class="progressBarContainer">
+								<div class="progressBarValue value-50"></div>
+							</div>
+						</div>
+					</div>
+					<div class="column">
+						<br>
+						<div class="progressBar">
+							<p>C</p>
+							<div class="progressBarContainer">
+								<div class="progressBarValue value-70"></div>
+							</div>
+						</div>
+						<div class="progressBar">
+							<p>HTML</p>
+							<div class="progressBarContainer">
+								<div class="progressBarValue value-80"></div>
+							</div>
+						</div>
+						<div class="progressBar">
+							<p>CSS</p>
+							<div class="progressBarContainer">
+								<div class="progressBarValue value-60"></div>
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
 			<div class="column">
 				<h1>Proficiência em Línguas</h1>
-				<ul>
-					<li>Português</li>
-					<li>Inglês</li>
-				</ul>
-			</div>
+				<br>
+				<div class="progressBar">
+					<p>Inglês</p>
+					<div class="progressBarContainer">
+						<div class="progressBarValue value-85"></div>
+					</div>
+				</div>
+				<div class="progressBar">
+					<p>Português</p>
+					<div class="progressBarContainer">
+						<div class="progressBarValue value-95"></div>
+					</div>
+				</div>
 		</div>
 	</div>
+</div>
+</div>
 </body>
 </html>
