--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 								<p>Competição de robôs seguidores de linha promovida pela Engenharia Elétrica - UFMG.</p>
 								<p>[<a href="https://www.facebook.com/UFMGcora/" target="blank">Facebook</a>]</p>
 								<br>
-								<h4>Pakot:</h4>
+								<h4>Pakot [Open-Source]:</h4>
 								<p>Plataforma web que simula um serviço de entregas de pacotes.</p>
 								<p>[<a href="https://www.usepakot.com/" target="blank">Projeto</a>][<a href="https://github.com/gustavo-depaula/pakot-backend" target="blank">Github</a>]</p>
 							</div>	
@@ -95,7 +95,7 @@
 								<h3>2018-2018</h3>
 							</div>
 							<div class="column is-two-thirds">
-								<h4>Vem de Zap:</h4>
+								<h4>Vem de Zap [Open-Source]:</h4>
 								<p>Site gerador de mensagens com integração ao Whats App, a partir da brincadeira "vem de zap".</p>
 								<p>[<a href="http://vem-de-zap.herokuapp.com" target="blank">Projeto</a>][<a href="https://github.com/raul4247/VemDeZap" target="blank">Github</a>]</p>
 							</div>
@@ -144,110 +144,32 @@
 		</div>
 		<div class="columns footer-section">
 			<div class="column">
-				<h1>Skils Gerais</h1>
+				<h1>Skills</h1>
 				<br>
-				<div class="progressBar">
-					<p>Desenvolvimento Web Geral</p>
-					<div class="progressBarContainer">
-						<div class="progressBarValue value-70"></div>
-					</div>
-				</div>
-				<div class="progressBar">
-					<p>Aplicações REST</p>
-					<div class="progressBarContainer">
-						<div class="progressBarValue value-80"></div>
-					</div>
-				</div>
-				<div class="progressBar">
-					<p>Desenvolvimento Desktop</p>
-					<div class="progressBarContainer">
-						<div class="progressBarValue value-60"></div>
-					</div>
-				</div>
-				<div class="progressBar">
-					<p>Linux + Shell</p>
-					<div class="progressBarContainer">
-						<div class="progressBarValue value-40"></div>
-					</div>
-				</div>
-				<div class="progressBar">
-					<p>Embarcados</p>
-					<div class="progressBarContainer">
-						<div class="progressBarValue value-50"></div>
-					</div>
-				</div>
+				<p>Aplicações REST</p>
+				<p>Javascript</p>
+				<p>PHP</p>
+				<p>HTML</p>
+				<p>CSS/SASS</p>
 			</div>
-			<div class="column">
-				<h1>Linguagens de Programação</h1>
-				<div class="columns">
-					<div class="column">
-						<br>
-						<div class="progressBar">
-							<p>Javascript</p>
-							<div class="progressBarContainer">
-								<div class="progressBarValue value-70"></div>
-							</div>
-						</div>
-						<div class="progressBar">
-							<p>PHP</p>
-							<div class="progressBarContainer">
-								<div class="progressBarValue value-80"></div>
-							</div>
-						</div>
-						<div class="progressBar">
-							<p>Python</p>
-							<div class="progressBarContainer">
-								<div class="progressBarValue value-40"></div>
-							</div>
-						</div>
-						<div class="progressBar">
-							<p>Java</p>
-							<div class="progressBarContainer">
-								<div class="progressBarValue value-50"></div>
-							</div>
+				<div class="column">
+					<h1>Proficiência em Línguas</h1>
+					<br>
+					<div class="progressBar">
+						<p>Inglês</p>
+						<div class="progressBarContainer">
+							<div class="progressBarValue value-85"></div>
 						</div>
 					</div>
-					<div class="column">
-						<br>
-						<div class="progressBar">
-							<p>C</p>
-							<div class="progressBarContainer">
-								<div class="progressBarValue value-70"></div>
-							</div>
-						</div>
-						<div class="progressBar">
-							<p>HTML</p>
-							<div class="progressBarContainer">
-								<div class="progressBarValue value-80"></div>
-							</div>
-						</div>
-						<div class="progressBar">
-							<p>CSS</p>
-							<div class="progressBarContainer">
-								<div class="progressBarValue value-60"></div>
-							</div>
+					<div class="progressBar">
+						<p>Português</p>
+						<div class="progressBarContainer">
+							<div class="progressBarValue value-95"></div>
 						</div>
 					</div>
 				</div>
 			</div>
-			<div class="column">
-				<h1>Proficiência em Línguas</h1>
-				<br>
-				<div class="progressBar">
-					<p>Inglês</p>
-					<div class="progressBarContainer">
-						<div class="progressBarValue value-85"></div>
-					</div>
-				</div>
-				<div class="progressBar">
-					<p>Português</p>
-					<div class="progressBarContainer">
-						<div class="progressBarValue value-95"></div>
-					</div>
-				</div>
 		</div>
 	</div>
-</div>
-</div>
 </body>
 </html>
