--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
 								<h3>2018-2018</h3>
 							</div>
 							<div class="column is-two-thirds">
-								<h4>Vem de Zap [Open-Source]:</h4>
-								<p>Site gerador de mensagens com integração ao Whats App, a partir da brincadeira "vem de zap".</p>
-								<p>[<a href="http://vem-de-zap.herokuapp.com" target="blank">Projeto</a>][<a href="https://github.com/raul4247/VemDeZap" target="blank">Github</a>]</p>
+								<h4>Site do Coltec UFMG [Estágio]:</h4>
+								<p>Reformulação da página do Colégio Técnico da UFMG.</p>
+								<p>[<a href="http://www.coltec.ufmg.br/coltec-ufmg/" target="blank">Página</a>]</p>
 							</div>
 						</div>
 					</div>
