--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 								<h3>2018-Atual</h3>
 							</div>
 							<div class="column is-two-thirds">
-								<h4>Bacharelado em Ciência da Computação</h4>
-								<p>Ciência da Computação (PUC MINAS).</p>
+								<h4>Graduação em Ciência da Computação</h4>
+								<p>Ciência da Computação (PUC MINAS) - 3º período.</p>
 							</div>
 						</div>
 					</div>
@@ -81,12 +81,12 @@
 							</div>
 							<div class="column is-two-thirds">
 								<h4>Competição Cora:</h4>
-								<p>Competição de robôs seguidores de linha promovida pela Engenharia Elétrica - UFMG.</p>
+								<p>Competição de robôs seguidores de linha promovida pela Engenharia Elétrica - UFMG (Arduíno).</p>
 								<p>[<a href="https://www.facebook.com/UFMGcora/" target="blank">Facebook</a>]</p>
 								<br>
 								<h4>Pakot [Open-Source]:</h4>
-								<p>Plataforma web que simula um serviço de entregas de pacotes.</p>
-								<p>[<a href="https://www.usepakot.com/" target="blank">Projeto</a>][<a href="https://github.com/gustavo-depaula/pakot-backend" target="blank">Github</a>]</p>
+								<p>Plataforma web que simula um serviço de entregas de pacotes (feito com VueJS e SlimPHP).</p>
+								<p>[<a href="https://github.com/gustavo-depaula/pakot-backend" target="blank">Github</a>]</p>
 							</div>	
 
 						</div>
@@ -96,7 +96,7 @@
 							</div>
 							<div class="column is-two-thirds">
 								<h4>Site do Coltec UFMG [Estágio]:</h4>
-								<p>Reformulação da página do Colégio Técnico da UFMG.</p>
+								<p>Reformulação da página do Colégio Técnico da UFMG (feito com Wordpress).</p>
 								<p>[<a href="http://www.coltec.ufmg.br/coltec-ufmg/" target="blank">Página</a>]</p>
 							</div>
 						</div>
@@ -149,6 +149,7 @@
 				<p>Aplicações REST</p>
 				<p>Javascript</p>
 				<p>PHP</p>
+				<p>Wordpress</p>
 				<p>HTML</p>
 				<p>CSS/SASS</p>
 			</div>
